Fixed bug and cleaned up code - originally addHoverEffect, changed to drawEffect - fixed bug where the wrong variable was called and we could not draw on grid - added spacing to color palette and mouse changes when hovering over color choice.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 .color-option {
     width: 40px;
     height: 40px;
+    margin: 5px;
     border: 1px solid #000;
     cursor: pointer;
 }
